	- Open/Close Valves for water release
	- Simple Logging of photo number combined with the current configuration
	- Refine panels and use split/scroll panes
* Only fire association changed event if object was added/removed?
* Set Description and Color per Device
* Mark Device Type with Icons
* Add Tests to the most important services and util methods
* Create Custom L&F with Synth or Nimbus

================================================================================
 I D E A S
================================================================================
* Internationalization
* Sensors
	- Sensor Setup Panel
	- SensorAction starts when sensor fires (with offset and/or duration)
* Open/Close Panels, Scroll Panels
* Move logging to own window?
* Tabbed View (Setup, Shooting, Finish/Clean)
* Only send data if something changed since last send
* Setup Flashes without valves
* Empty valves (all, single, combination)
* Processing:
	o embed Comments, Tags to EXIF
	o embed the setup information in some kind of 'code' to EXIF
	o watch folder / distribution folder
	  example workflow: Camera -> watch folder -> Droplet -> distribution folder -> Lightroom
* Logging:
	o log comments, times, setup, ... per session into file
* Graphical View of one cycle
* Automatic Action Times:
	o Offset + Duration = min. Offset of the following Action
* Viscosity Factor:
	o Factor that adapts the action times of devices
* How to handle different raw formats in aspect of EXIF ???
* Add Key Shortcuts for the main actions


NEW FEATURES:
* Connect to serial port and show connection status
* Devices: Valve, Flash, Camera
* Actions: Offset Action, Duration Action
* Define 0..n Actions per Device
* Start one Cycle
* Begin New Droplet Setup
* Open/Save Droplet Setup
* Simple Logging

NOTES:
* Had to use RXTX-2.1.7 due to compatibility problems on OSX

CHANGES:

BUG FIXES:

KNOWN ISSUES:


==EOF===========================================================================