@@ -31,6 +31,7 @@ Release 0.1b
 * Mark Device Type with Icons
 * Add Tests to the most important services and util methods
 * Create Custom L&F with Synth or Nimbus
+* Implement simple About dialog
 
 ================================================================================
  I D E A S
